--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 numpy==1.23.3
 pefile==2022.5.30
+prettyprint==0.1.5
 pyinstaller==5.4.1
 pyinstaller-hooks-contrib==2022.10
 pywin32-ctypes==0.2.0
